# trading-simulator

./: .gitignore  README.md  repo.bundle
docs/: 周报_20260215.md
matcher-server/: .gitignore  CMakeLists.txt  matcher-server_README.md  vcpkg.json
matcher-server/docs/: matcher-server_docs_design_v1.0.md
matcher-server/include/core/: IMatchingEngine.h  MatchingEngine.h  OrderBook.h
matcher-server/include/ipc/: HttpIPCServer.h  IPCServer.h
matcher-server/include/model/: Order.h  Trade.h
matcher-server/include/persistence/: IPersistence.h  MySQLPersistence.h  ProxyPersistence.h
matcher-server/include/util/: Logger.h
matcher-server/scripts/: convert-to-utf8bom.ps1  force-convert-utf8bom.ps1
matcher-server/src/: main.cpp
matcher-server/src/core/: MatchingEngine.cpp  OrderBook.cpp
matcher-server/src/ipc/: HttpIPCServer.cpp  StdioIPCServer.cpp
matcher-server/src/logger/: Logger.cpp
matcher-server/src/persistence/: MySQLPersistence.cpp  ProxyPersistence.cpp
matcher-server/tests/: engine_test.cpp  logger_test.cpp
native-modules/python/asscee_part/: asscee_part.py
native-modules/python/risk/: README.md  main.py  requirements.txt  risk_manager.py  test_risk_manager.py  verify_integration.py
trading_services/: README.md  pom.xml
trading_services/data_analysis/: README.md  analysis_report.json  analysis_report.txt  history_analysis.py  history_storage.py
trading_services/data_analysis/data/: manifest_20260306212300.json  manifest_20260308152429.json  manifest_20260308152431.json  manifest_20260308152737.json  manifest_20260308152742.json  orders_20260308152429.csv  orders_202603d202519.csv  trades_20260308152742.csv  trades_202603d202519.csv
trading_services/docs/: 11-Java模块部署步骤.md  Order订单测试样例.md  TestCase-01案例.md  TestCase-02案例.md  TestCase-05案例.md  TestCase-06案例.md  TestCase-07案例.md  TestCase-系统核心功能测试案例.md  design.md  start_all_linux.sh  start_mysql.sh  start_redis.sh  start_trading_simulator.sh  stop_all_linux.sh  stop_all_monitor.bat  stop_mysql.sh  stop_redis.sh  stop_trading_simulator.sh
trading_services/docs/monitoring/: start_all_win_monitor.bat  监控系统设计-表盘设计文档.md  股票撮合系统监控大盘-1772504858718.json  股票撮合系统监控大盘-1772551751245.json  股票撮合系统监控大盘-1772781837175.json
trading_services/docs/sql/: t_exchange_order.sql
trading_services/docs/stress_test/: 01-trading_stress_test.py  01-压测分析文档.md  01-改造方案.md  02-trading_stress_test.py  02-压测设计文档.md
trading_services/docs/test-cases/: TestCase-03案例.md  TestCase-04案例.md  TestCase-05案例.md  TestCase-06案例.md
trading_services/management-ui/: README.md  app.py  start_ui.sh
trading_services/management-ui/templates/: index.html
trading_services/src/main/java/com/example/trading/: TradingSimulatorApplication.java
trading_services/src/main/java/com/example/trading/application/: AsyncPersistService.java  CancelService.java  ExchangeService.java  OrderConsistencyCheckService.java  OrderIdempotentService.java  OrderReconciliationService.java  PersistCoreService.java  PersistHelperService.java  PersistRetryTaskJob.java  TradePersistenceService.java  (+1 more)
trading_services/src/main/resources/: application.yml  logback.xml
trading_services/src/main/resources/mapper/: OrderMapper.xml  TradeMapper.xml
trading_services/src/main/resources/sql/: t_exchange_order.sql  t_exchange_trade.sql
trading_services/src/test/java/com/example/trading/: OrderPersistenceTest.java  RedisTest.java
(+45 files in other folders)
